feat(app-settings): pending restart flag
