# packages/backend/src/modules/apps/dto/app.dto.ts
@@ -19,6 +19,7 @@ export class AppDto extends createZodDto(
     config: z.record(z.any()).optional(),
     enableAuth: z.boolean().optional(),
     localSubdomain: z.string().nullish(),
+    pendingRestart: z.boolean(),
   }),
 ) {}
 
