# packages/backend/src/swagger.json
@@ -2257,6 +2257,9 @@
                     "localSubdomain": {
                       "type": "string",
                       "nullable": true
+                    },
+                    "pendingRestart": {
+                      "type": "boolean"
                     }
                   },
                   "required": [
@@ -2268,7 +2271,8 @@
                     "openPort",
                     "exposedLocal",
                     "domain",
-                    "isVisibleOnGuestDashboard"
+                    "isVisibleOnGuestDashboard",
+                    "pendingRestart"
                   ]
                 },
                 "info": {
@@ -2445,6 +2449,9 @@
                     "localSubdomain": {
                       "type": "string",
                       "nullable": true
+                    },
+                    "pendingRestart": {
+                      "type": "boolean"
                     }
                   },
                   "required": [
@@ -2456,7 +2463,8 @@
                     "openPort",
                     "exposedLocal",
                     "domain",
-                    "isVisibleOnGuestDashboard"
+                    "isVisibleOnGuestDashboard",
+                    "pendingRestart"
                   ]
                 },
                 "info": {
@@ -2782,6 +2790,9 @@
               "localSubdomain": {
                 "type": "string",
                 "nullable": true
+              },
+              "pendingRestart": {
+                "type": "boolean"
               }
             },
             "required": [
@@ -2793,7 +2804,8 @@
               "openPort",
               "exposedLocal",
               "domain",
-              "isVisibleOnGuestDashboard"
+              "isVisibleOnGuestDashboard",
+              "pendingRestart"
             ],
             "nullable": true
           },
